--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>the calendar for artists</title>
-    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -31,12 +30,12 @@
             <img src="img/g1.png" alt="">
         </div>
         <div class="feature-info">
-            <div class="feature-info-title">logbook</div>
-            <div class="more-description">keep track of your daily life</div>
+            <div class="feature-info-title">schedule</div>
+            <div class="more-description">schedule your work</div>
         </div>
         <div class="features-show">
-            <div class="feature-list logbook-feature" data-gif="./img/g1.png" data-title="logbook"
-                data-description="keep track of your daily activities">
+            <div class="feature-list logbook-feature" data-gif="./img/g1.png" data-title="schedule"
+                data-description="schedule your work">
                 <svg xmlns="http://www.w3.org/2000/svg" width="51" height="51" viewBox="0 0 512 512"
                     style="fill: #ffffff;">
                     <rect x="48" y="80" width="416" height="384" rx="48" ry="48"
@@ -52,8 +51,8 @@
                         style="fill:none;stroke:#ffffff;stroke-linejoin:round;stroke-width:32px" />
                 </svg>
             </div>
-            <div class="feature-list schedule-feature" data-gif="./img/g2.png" data-title="schedule"
-                data-description="schedule your daily work">
+            <div class="feature-list schedule-feature" data-gif="./img/g2.png" data-title="dots"
+                data-description="join the dots don't break the chain">
                 <svg xmlns="http://www.w3.org/2000/svg" width="51" height="51" viewBox="0 0 512 512">
                     <title>join the dots & dont break the chain</title>
                     <rect x="64" y="64" width="80" height="80" rx="40" ry="40"
@@ -76,8 +75,8 @@
                         style="fill:aqua;stroke:aqua;stroke-miterlimit:10;stroke-width:32px" />
                 </svg>
             </div>
-            <div class="feature-list dot-feature" data-gif="./img/g3.png" data-title="dots"
-                data-description="join the dots don't break the chain">
+            <div class="feature-list dot-feature" data-gif="./img/g3.png" data-title="logbook"
+                data-description="keep track of your daily activities">
                 <svg xmlns="http://www.w3.org/2000/svg" width="51" height="51" viewBox="0 0 512 512">
                     <line x1="256" y1="400" x2="256" y2="464"
                         style="fill:none;stroke:#ffffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px" />
@@ -96,7 +95,6 @@
         </div>
     </div>
 </body>
-<script src="js/swiper.min.js"></script>
 <script src="js/main.js"></script>
 
 </html>
