--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>the calendar for artists</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="icon" type="image/png" href="img/cal_x.png" />
 </head>
 
 <body>
